<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_random">

    <fragment
        android:id="@+id/nav_random"
        android:name="com.example.citatnikandroid.activities.getRandomCitata.GetRandomCitataFragment"
        android:label="@string/menu_random"
        tools:layout="@layout/fragment_get_random_citata">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.citatnikandroid.views.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_random" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.citatnikandroid.activities.addCitata.AddCitataFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add_citata" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.citatnikandroid.activities.settings.SettingsFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.citatnikandroid.activities.listCitatas.ListCitatasFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_list" />
</navigation>