<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:id="@+id/widgetContent"
        android:text="@string/widgetContentText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@android:color/black"/>

    <TextView android:id="@+id/widgetAuthor"
        android:text="@string/widgetAuthorText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <TextView android:id="@+id/widgetDate"
        android:text="@string/widgetDateText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="18dp"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:textStyle="italic"
        android:textColor="@android:color/black"/>
</LinearLayout>