<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.addCitata.AddCitataFragment">

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/activity_background" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="@dimen/baseLayoutMarginLeftRight"
        android:layout_marginLeft="@dimen/baseLayoutMarginLeftRight"
        android:layout_marginEnd="@dimen/baseLayoutMarginLeftRight"
        android:layout_marginRight="@dimen/baseLayoutMarginLeftRight"
        android:layout_marginBottom="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <TextView
            android:id="@+id/newCitataGreetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/textAddCitataGreetings"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="italic"
            android:lines="2"/>


        <LinearLayout
            android:id="@+id/authorAddLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/newCitataGreetings"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/authorAddTextView"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif"
                android:gravity="right"
                android:text="@string/authorTextView"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/authorAddEditText"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"

                android:fontFamily="sans-serif"
                android:gravity="left"
                android:text=""
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="italic"

                android:inputType="text"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/creationDateAddLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/authorAddLayout"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/creationDateAddTextView"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif"
                android:gravity="right"
                android:text="@string/dateTextView"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/creationDateAddEditText"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"

                android:fontFamily="sans-serif"
                android:gravity="left"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="italic"

                android:inputType="text"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/contentAddLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/creationDateAddLayout"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/contentAddTextView"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif"
                android:gravity="right"
                android:text="@string/contentTextView"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/contentAddEditText"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"

                android:fontFamily="sans-serif"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="italic"
                android:minLines="1"
                android:maxLines="12"
                android:gravity="top|left"
                android:maxLength="200"

                android:hint="@string/addCitataContentHint"
                android:inputType="textMultiLine"/>
        </LinearLayout>

    </RelativeLayout>


    <Button
        android:id="@+id/addCitataButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"

        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/addCitataTextButton"
        android:textColor="#000"
        android:alpha="0.6"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>