<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.settings.SettingsFragment">

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/activity_background" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="@dimen/baseLayoutMarginLeftRight"
        android:layout_marginLeft="@dimen/baseLayoutMarginLeftRight"
        android:layout_marginEnd="@dimen/baseLayoutMarginLeftRight"
        android:layout_marginRight="@dimen/baseLayoutMarginLeftRight"
        android:layout_marginBottom="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/settingsGreetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/settingsGreetingsText"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="italic"
            android:lines="2"/>


        <LinearLayout
            android:id="@+id/maxListLengthLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/settingsGreetings"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/maxListLengthTextView"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif"
                android:gravity="right"
                android:text="@string/maxListLengthTextViewText"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/maxListLengthEditText"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"

                android:fontFamily="sans-serif"
                android:gravity="left"
                android:text=""
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="italic"

                android:inputType="numberSigned"/>
        </LinearLayout>

    </RelativeLayout>


    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"

        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/saveSettingsButtonText"
        android:textColor="#000"
        android:alpha="0.6"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>